crates/ruff_linter/src/rules/ruff/snapshots/ruff_linter__rules__ruff__tests__RUF030_control_var_used_after_block.py.snap
---
source: crates/ruff_linter/src/rules/ruff/mod.rs
---
control_var_used_after_block.py:6:5: RUF030 `for` loop variable global_var is used outside of block
  |
5 | # ❌
6 | _ = global_var
  |     ^^^^^^^^^^ RUF030
7 | 
8 | def foo():
  |

control_var_used_after_block.py:15:9: RUF030 `for` loop variable event is used outside of block
   |
14 |     # ❌
15 |     _ = event
   |         ^^^^^ RUF030
16 | 
17 |     for x in []:
   |

control_var_used_after_block.py:28:12: RUF030 `for` loop variable x is used outside of block
   |
26 |     for y in []:
27 |         # ❌ x is used outside of the loop it was defined in (meant to use y)
28 |         if x == 5:
   |            ^ RUF030
29 |             pass
   |

control_var_used_after_block.py:40:9: RUF030 `for` loop variable room_id is used outside of block
   |
39 |     # ❌ After the loop is not ok because the value is probably not what you expect
40 |     _ = room_id
   |         ^^^^^^^ RUF030
41 | 
42 |     # Tuple destructuring
   |

control_var_used_after_block.py:50:9: RUF030 `for` loop variable a is used outside of block
   |
49 |     # ❌
50 |     _ = a
   |         ^ RUF030
51 |     _ = b
52 |     _ = c
   |

control_var_used_after_block.py:51:9: RUF030 `for` loop variable b is used outside of block
   |
49 |     # ❌
50 |     _ = a
51 |     _ = b
   |         ^ RUF030
52 |     _ = c
   |

control_var_used_after_block.py:52:9: RUF030 `for` loop variable c is used outside of block
   |
50 |     _ = a
51 |     _ = b
52 |     _ = c
   |         ^ RUF030
53 | 
54 |     # Array destructuring
   |

control_var_used_after_block.py:62:9: RUF030 `for` loop variable d is used outside of block
   |
61 |     # ❌
62 |     _ = d
   |         ^ RUF030
63 |     _ = e
64 |     _ = f
   |

control_var_used_after_block.py:63:9: RUF030 `for` loop variable e is used outside of block
   |
61 |     # ❌
62 |     _ = d
63 |     _ = e
   |         ^ RUF030
64 |     _ = f
   |

control_var_used_after_block.py:64:9: RUF030 `for` loop variable f is used outside of block
   |
62 |     _ = d
63 |     _ = e
64 |     _ = f
   |         ^ RUF030
   |
