crates/ruff_linter/src/rules/ruff/snapshots/ruff_linter__rules__ruff__tests__RUF034_RUF034.py.snap
---
source: crates/ruff_linter/src/rules/ruff/mod.rs
---
RUF034 Useless `if`-`else` condition
 --> RUF034.py:5:5
  |
5 | x = 1 if True else 1
  |     ^^^^^^^^^^^^^^^^
  |

RUF034 Useless `if`-`else` condition
 --> RUF034.py:8:5
  |
8 | x = "a" if True else "a"
  |     ^^^^^^^^^^^^^^^^^^^^
  |

RUF034 Useless `if`-`else` condition
  --> RUF034.py:11:5
   |
11 | x = 0.1 if False else 0.1
   |     ^^^^^^^^^^^^^^^^^^^^^
   |
