crates/ruff_linter/src/rules/ruff/snapshots/ruff_linter__rules__ruff__tests__RUF035_RUF035.py.snap
---
source: crates/ruff_linter/src/rules/ruff/mod.rs
snapshot_kind: text
---
RUF035.py:3:21: RUF035 Non-string literal used as assert message
  |
1 | fruits = ["apples", "plums", "pear"]
2 | fruits.filter(lambda fruit: fruit.startwith("p"))
3 | assert len(fruits), 2
  |                     ^ RUF035
4 | 
5 | assert True, "always true"
  |
